# sentiric-knowledge-query-service

./: .context.md  .dockerignore  .env.example  .gitignore  Dockerfile  LOGIC.md  Makefile  README.md  TASK.md  docker-compose.infra.yml  docker-compose.override.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: main.py  runner.py  schemas.py
app/core/: config.py  engine.py  health.py  logging.py  metrics.py
app/grpc/: service.py
app/static/: index.html
